* honor `GS_OPTIONS` environment variable for supplying additional parameters to command called by RGhost optimizer (#2337)

Improvements::

* process `pre-wrap` role in text formatter
* drop support for the unmaintained payment font (`pf`) for use in font-based icons

Bug Fixes::

* resolve remote image in document title or section title with autogenerated ID
* don't add chapter signifier if `chapter-signifier` is unset (#2328)
* don't add part signifier if `part-signifier` is unset (#2328)
* keep caret between items in menu macro with previous item if items wrap
* don't include bottom margin when computing heading height if `heading-min-height-after` theme key is empty (#2326)
* draw border on heading (section title or discrete heading) if it is advanced to next page (#2322)
* arrange heading even if section is empty
* ensure `heading-min-height-after` theme key is ignored if section is empty or discrete heading is last child
* don't force justify first line of abstract if it ends with a hard break
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case

== 2.3.0 (2022-08-16) - @mojavelinux

Enhancements::

* place footnotes directly below last block of content if `footnotes-margin-top` theme key is 0 (#2291)
* allow page / column break to be forced using `always` option (e.g., `[%always]`) (#2300)
* insert column break instead of page break in multi-column layout if `column` role is specified on page break macro (#2293)
* use relative font size for big and small roles (#2307)
* use default-for-print theme by default if media is `print` or `prepress` (#2306)
* support text alignment roles on all styled paragraphs
* support text alignment roles on verse block

Bug Fixes::

* only indent text that starts at left margin (i.e., when text align is left or justify) (#2298)