@@ -33,6 +33,7 @@ Improvements::
 
 Bug Fixes::
 
+* fix crash when smallcaps text transform is applied to a phrase (#2339)
 * resolve remote image in document title or section title with autogenerated ID
 * don't add chapter signifier if `chapter-signifier` is unset (#2328)
 * don't add part signifier if `part-signifier` is unset (#2328)
